# app_tracer

./: CHANGELOG.md  Cargo.toml  README.md
docs/: 0_motivation.md  1_install.md  9_contrib.md  README.md  install.md  usage.md
examples/: test_app.rs
src/: args.rs  error.rs  tracer.rs  tracer_ui.rs  utils.rs
src/trace/: app.rs  app_data_streams.rs  appdatastreams.rs  event.rs  mod.rs
src/trace/datastreams/: cpu_monitor.rs  cpumonitor.rs  data_stream.rs  datastream.rs  memory_monitor.rs  memorymonitor.rs  mod.rs  process_monitor.rs  processmonitor.rs
src/trace/ui/: tabs.rs
src/trace/ui/panels/: cpu_usage.rs  memory_usage.rs  mod.rs  process.rs  utils.rs
src/trace/ui/panels/system/: cpuusage.rs  memoryusage.rs  mod.rs  processes.rs
src/trace/ui/renderer/: mod.rs  render.rs  system_tab.rs
